Run and fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,11 +14,16 @@
     }
 
     .contact-form .form-control {
+        font-size: 16px;
         padding: 15px;
     }
 
     .contact-info {
         line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 16px;
     }
 
     .social-list a {
