--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,8 @@ html {
     display: inline-block;
     border: none;
     text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
